# lenguajes-funcionales-modernos

./: README.md
program-samples/lambda/: saludo.lam
program-samples/ski/: second.ski
program-samples/subs/: numbers.subs  twenty.subs
programa/: CHANGELOG.md  programa.cabal
reporte/: .gitignore  README.md  install-latex.py
reporte/latex/: build  build-silent  clean  main.tex  referencias.bib
reporte/latex/subs/: SKI-C.tex  SKIintermedio.tex  combinadoresSKI.tex  conclusion.tex  introduccion.tex  lambda-SKI.tex  lambda-lifting.tex  preliminares.tex  resultados.tex
reporte/latex/subs/implementacion/: expr.tex  graph.tex  overview.tex
reporte/latex/subs/implementacion?/: ski-parser.tex  util.tex
reporte/latex/subs/metodologia/: lambda.tex
reporte/latex/subs/metodologia/optimizaciones/: graph-red.tex  opt-ski.tex
reporte/latex/util/: comandos.sty  configuracion.sty  estilo.sty  incluye.sty
ski-compiler/: .gitignore  cabal  ski-compiler.cabal  tests.py
ski-compiler/app/: CodeGenerator.hs  LexerSpec.txt  Main.hs  Parser.hs
ski-compiler/app/common/: Expr.hs  Graph.hs  Util.hs
ski-compiler/app/lambda-parse/: Lexer.hs  LexerSpec.txt  Parser.hs
ski-compiler/app/lambda-parse/util/: Kiselyov.hs  Lambda.hs  LambdaDesugar.hs  LambdaParser.hs
ski-compiler/app/lazy/: CodeGenerator.hs
ski-compiler/app/ski-parse/: Lexer.hs  Parser.hs
ski-compiler/app/strict/: CodeGenerator.hs
ski-compiler/app/subs-parse/: Lexer.hs  LexerSpec.txt  Parser.hs
