cabal-version:      3.0
name:               ski-compiler
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Santiago Romero, Arlet Pinacho, Juvenal Guzman, Ricardo Ivan Martinez
maintainer:         srp.devel@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-settings
    default-language: GHC2021
    ghc-options: -Wall -optl-pthread
    hs-source-dirs: app/common
    build-depends:
        base ^>=4.18,
        text >= 2.0.2 && < 2.1,
        bytestring >= 0.11.5 && < 0.12,
        process >= 1.6.19 && < 1.7,
        unordered-containers >= 0.2.20 && < 0.3,
        hashable >= 1.5.0 && < 1.6,
        directory >= 1.3.8 && < 1.4,

executable ski-compiler-strict
    import:           common-settings
    main-is:          Main.hs
    other-modules:    Lexer, Parser, CodeGenerator, Expr, Util
    hs-source-dirs:   app, app/ski-parse, app/strict

executable lambda-compiler-strict
    import:           common-settings
    main-is:          Main.hs
    other-modules:    Lexer, Parser, LambdaParser, LambdaDesugar, Lambda,
                      CodeGenerator, Expr, Util
    hs-source-dirs:   app, app/lambda-parse, app/strict, app/lambda-parse/util

executable subs-compiler-strict
    import:           common-settings
    main-is:          Main.hs
    other-modules:    Lexer, Parser, LambdaParser, LambdaDesugar, Lambda,
                      CodeGenerator, Expr, Util, Graph
    hs-source-dirs:   app, app/subs-parse, app/strict, app/lambda-parse/util

executable ski-compiler-lazy
    import:           common-settings
    main-is:          Main.hs
    other-modules:    Lexer, Parser, CodeGenerator, Expr, Util
    hs-source-dirs:   app, app/ski-parse, app/lazy

executable lambda-compiler-lazy
    import:           common-settings
    main-is:          Main.hs
    other-modules:    Lexer, Parser, LambdaParser, LambdaDesugar, Lambda,
                      CodeGenerator, Expr, Util
    hs-source-dirs:   app, app/lambda-parse, app/lazy, app/lambda-parse/util

executable subs-compiler-lazy
    import:           common-settings
    main-is:          Main.hs
    other-modules:    Lexer, Parser, LambdaParser, LambdaDesugar, Lambda,
                      CodeGenerator, Expr, Util, Graph
    hs-source-dirs:   app, app/subs-parse, app/lazy, app/lambda-parse/util
